[gd_scene load_steps=2 format=3 uid="uid://bkgsevpv0ochw"]

[ext_resource type="Script" uid="uid://dw6iuvojohrrd" path="res://Scripts/stop_element.gd" id="1_n3tqv"]

[node name="StopElement" type="HBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_n3tqv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="StopName" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 103.0
offset_bottom = 11.5
grow_vertical = 2
size_flags_horizontal = 3
text = "Track123@34"

[node name="Remove" type="Button" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
text = "x"

[connection signal="pressed" from="Remove" to="." method="_on_remove_pressed"]
